Добавил порты для Postgres

--- a/block2/6.2/src/docker-compose.yml
+++ b/block2/6.2/src/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     volumes:
       - db-volume:/var/lib/postgresql/data
       - backup-volume:/var/tmp
+    ports:
+      - 5432:5432
 
   adminer:
     image: adminer
