Поправил имя юзера для входа в MySQL-базу в /block2/6.3/src/docker-compose.yml

--- a/block2/6.3/src/docker-compose.yml
+++ b/block2/6.3/src/docker-compose.yml
@@ -1,5 +1,7 @@
 #На основе рекомендаций от фирменного MySQL
-#Юзер Postgres`а: postgres
+#Юзер MySQL`я: root
+#в базу заходим через:
+#mysql -h db -u root -p
 version: "3.8"
 
 services:
